# 44s-benchmark

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.py  requirements.txt
src/: main.rs
